Fixing newsletter alignment on jobs page

--- a/jobs/scss/jobs.scss
+++ b/jobs/scss/jobs.scss
@@ -78,7 +78,6 @@ h2 {
 }
 
 .form-group {
-    max-width: 10em;
     bottom: 20px;
 }
 
